--- a/app/src/main/res/values-v27/themes.xml
+++ b/app/src/main/res/values-v27/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme.Update" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme.Update" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <item name="colorPrimaryDark">@android:color/white</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:navigationBarColor">@android:color/white</item>
