Скрытие клавиатуры по скроллу; тестовая реализация профиля пользователя / группы / информации чата; тёмная тема (beta)

--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -61,7 +61,7 @@
                     android:layout_marginStart="4dp"
                     android:fontFamily="@font/tt_commons_medium"
                     android:singleLine="true"
-                    android:textColor="?colorAccent"
+                    android:textColor="?itemTitleColor"
                     android:textSize="20sp"
                     tools:text="Unidevs" />
 
