--- a/app/src/main/res/drawable/chat_panel_background.xml
+++ b/app/src/main/res/drawable/chat_panel_background.xml
@@ -9,7 +9,7 @@
     <!--        android:topLeftRadius="36dp"-->
     <!--        android:topRightRadius="36dp" />-->
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="?colorSurface" />
 
     <stroke
         android:width="1dp"
