--- a/app/src/main/res/drawable/ic_message_bubble_out_simple.xml
+++ b/app/src/main/res/drawable/ic_message_bubble_out_simple.xml
@@ -2,15 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@android:color/transparent" />
 
     <corners android:radius="28dp" />
-
-<!--    <corners-->
-<!--        android:bottomLeftRadius="28dp"-->
-<!--        android:bottomRightRadius="5dp"-->
-<!--        android:topLeftRadius="28dp"-->
-<!--        android:topRightRadius="5dp" />-->
 
     <stroke
         android:color="#665c9ce6"
