--- a/app/src/main/res/drawable/navigation_view_item_background_normal.xml
+++ b/app/src/main/res/drawable/navigation_view_item_background_normal.xml
@@ -3,7 +3,7 @@
 
     <item android:end="6dp">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="@android:color/transparent" />
             <corners
                 android:bottomLeftRadius="0dp"
                 android:bottomRightRadius="24dp"
