--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,55 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar.Bridge">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="toolbarStyle">@style/AppTheme.Toolbar</item>
-        <item name="android:windowLightStatusBar">true</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
-<<<<<<< Updated upstream
-=======
         <item name="dialogCornerRadius">12dp</item>
         <item name="android:windowBackground">@color/background</item>
-        <item name="itemTitleColor">@color/accent</item>
->>>>>>> Stashed changes
+        <item name="itemTitleColor">@android:color/white</item>
 
         <item name="android:windowAnimationStyle">@style/AppTheme.ActivityAnimation</item>
 
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
-<<<<<<< Updated upstream
-        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">@android:color/transparent</item>
-
-=======
         <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">@color/divider</item>
->>>>>>> Stashed changes
         <item name="android:navigationBarColor">@color/navigationBar</item>
     </style>
 
-    <style name="AppTheme.Toolbar" parent="Widget.MaterialComponents.Toolbar.PrimarySurface">
-        <item name="titleTextAppearance">@style/Toolbar.Title</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:elevation">3dp</item>
-        <item name="titleTextColor">?colorAccent</item>
-        <item name="android:background">?colorPrimary</item>
-    </style>
-
-    <style name="AppTheme.Start" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="AppTheme.Start" parent="Theme.MaterialComponents.NoActionBar.Bridge">
         <item name="android:windowBackground">@color/accent</item>
         <item name="colorPrimaryDark">@color/accent</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:navigationBarColor">@color/accent</item>
+        <item name="dialogCornerRadius">12dp</item>
         <item name="android:windowAnimationStyle">@style/AppTheme.ActivityAnimation</item>
     </style>
 
-    <style name="AppTheme.Update" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme.Update" parent="Theme.MaterialComponents.NoActionBar.Bridge">
         <item name="colorPrimaryDark">@android:color/white</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
-    <style name="AppTheme.ProfileDialog" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+    <style name="AppTheme.ProfileDialog" parent="Theme.MaterialComponents.BottomSheetDialog">
         <item name="colorAccent">@color/accent</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
