--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <attr name="itemTitleColor" format="color" />
+
     <declare-styleable name="CircleImageView">
         <attr name="radius" format="integer" />
     </declare-styleable>
