--- a/app/src/main/res/layout/item_message_attachment_out.xml
+++ b/app/src/main/res/layout/item_message_attachment_out.xml
@@ -62,5 +62,12 @@
 
     </ru.melod1n.vk.widget.BoundedLinearLayout>
 
+    <LinearLayout
+        android:id="@+id/messageAttachments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        tools:ignore="Orientation" />
+
 
 </LinearLayout>
