--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -9,7 +9,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
+        android:scrollbars="vertical"
         tools:itemCount="100" />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
