--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -68,7 +68,7 @@
         tools:visibility="gone" />
 
     <include
-        layout="@layout/no_items_view"
+        layout="@layout/placeholder_no_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
@@ -110,7 +110,7 @@
     </LinearLayout>
 
     <include
-        layout="@layout/no_internet_view"
+        layout="@layout/placeholder_no_internet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
