--- a/app/src/main/res/layout/placeholder_error.xml
+++ b/app/src/main/res/layout/placeholder_error.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/noItemsView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/errorView"
     android:background="?android:windowBackground"
     android:gravity="center"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_kitten" />
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
+        android:src="@drawable/ic_placeholder_error" />
 
     <TextView
-        android:id="@+id/noItemsText"
+        android:id="@+id/errorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:fontFamily="@font/tt_commons_regular"
+        android:text="@string/access_error"
         android:textAppearance="?android:textAppearanceMedium"
-        android:textSize="18sp"
-        tools:text="@string/list_is_empty" />
+        android:textSize="20sp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/noItemsRefresh"
+        android:id="@+id/errorRefresh"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
